# yarara

./: .buildinfo  .gitignore  .gitmodules  KitCat.py  README.md  Rassine.py  Rassine3.8_multiprocessed.py  Rassine_config.py  Rassine_functions.py  Rassine_multiprocessed.py  Rassine_trigger.py  TODO.md  api.html  calculate_RV_line_by_line_Bouchy.c  data.html  genindex.html  harpn.ini  harps03.ini  index.html  my_classes.py  my_functions.py  my_rassine_tools.py  notes.md  objects.inv  periodogram_new(worked_20:07:21).c  produce_dace_summary.py  products.html  products.md.old  products.py.old  py-modindex.html  pyproject.toml  run_HD110315.sh  run_database_yarara.py  run_rassine.s  run_yarara.s  run_yarara_step.s  search.html  searchindex.js  trigger_yarara_espresso18.py  trigger_yarara_espresso19.py  (+5 more)
.github/workflows/: build-docs.yml  ci.yml  test-report.yml
MASK_CCF/: K5.txt  README.md  mask_telluric_h2o.txt  mask_telluric_o2.txt  mask_telluric_telluric.txt
Material/: Contam_HARPN.p  HARPN_BLAZE_A.fits  HARPN_WAVE_MATRIX_A.fits  README.md  logT_logM_logR.p  transits.csv
Python/: UpdatePaths.md  parallel  pyproject.toml  run_rassine.sh  trigger_yarara_harpn.py
Python/docs/: Makefile
Python/docs/source/: api.rst  index.rst
Python/src/yarara/: __init__.py  materials.py  plots.py  util.py
Python/src/yarara/analysis/: table.py  table_xy.py
Python/src/yarara/stages/: __init__.py
Python/src/yarara/stats/: rm_outliers.py  smooth.py
Python/src/yarara/sts/: __init__.py  _activity.py  _extract.py  _plots.py  activity.py  extract.py
Python/src/yarara/sts/_bridge/: __init__.py
Python/src/yarara/sts/_ccf/: analysis.py  io.py  master.py
Python/src/yarara/sts/_instrument/: correct_borders_pxl.py  correct_frog.py  correct_pattern.py  produce_mask_contam.py  produce_mask_frog.py
Python/src/yarara/sts/_io/: flux.py  obs_info.py  pickle.py  rassine.py  reduction.py  spectrum.py  star_info.py  suppress.py
Python/src/yarara/sts/_outliers/: brute.py  cosmics.py  mad.py  smooth.py
Python/src/yarara/sts/_processing/: activity_index.py  map.py  retropropagation_correction.py  uncorrect_hole.py
Python/src/yarara/sts/_telluric/: analysis.py  correct.py  gradient.py  oxygen.py
Python/src/yarara/sts/_util/: cut_spectrum.py  map.py  median_master.py  non_zero_flux.py  poissonian_noise.py
Python/src/yarara/sts/bridge/: __init__.py
Python/src/yarara/sts/ccf/: analysis.py  master.py
Python/src/yarara/sts/instrument/: produce_mask_contam.py  produce_mask_frog.py
Python/src/yarara/sts/io/: obs_info.py  star_info.py  summary.py  suppress.py
Python/src/yarara/sts/outliers/: cosmics.py  mad.py
Python/src/yarara/sts/processing/: map.py
Python/src/yarara/sts/telluric/: correct.py  gradient.py  oxygen.py
Python/src/yarara/sts/util/: map.py  non_zero_flux.py  poissonian_noise.py
Python/test/: test_HD110315.bats
_autosummary/: yarara.analysis.html  yarara.analysis.table.html  yarara.analysis.table_xy.html  yarara.analysis.table_xy.tableXY.html  yarara.constants.html  yarara.deprecated.html  yarara.deprecated.try_field.html  yarara.html  yarara.iofun.html  yarara.iofun.open_pickle.html  yarara.iofun.pickle_dump.html  yarara.iofun.save_pickle.html  yarara.iofun.touch_pickle.html  yarara.materials.Contam_HARPN.html  yarara.materials.FixedFloat.html  yarara.materials.FixedInt.html  yarara.materials.FixedString.html  yarara.materials.Ghost_HARPN.html  yarara.materials.SIMBADEntry.html  yarara.materials.Table_stellar_model.html  yarara.materials.Telluric_spectrum.html  yarara.materials.html  yarara.mathfun.gaussian.html  yarara.mathfun.html  yarara.mathfun.lorentzian.html  yarara.mathfun.parabole.html  yarara.mathfun.sinus.html  yarara.mathfun.voigt.html  yarara.plots.auto_axis.html  yarara.plots.html  yarara.plots.init_matplotlib.html  yarara.plots.my_colormesh.html  yarara.plots.plot_color_box.html  yarara.plots.plot_copy_time.html  yarara.plots.transit_draw.html  yarara.run_yarara.Task.html  yarara.run_yarara.cli.html  yarara.run_yarara.html  yarara.run_yarara.run.html  yarara.stages.html  (+51 more)
_modules/: index.html
_modules/yarara/: deprecated.html  iofun.html  materials.html  mathfun.html  plots.html  run_yarara.html  stages.html  sts.html  util.html
_modules/yarara/analysis/: table.html  table_xy.html
_modules/yarara/stats/: clustering.html  misc.html  nearest.html  rm_outliers.html  smooth.html
_sources/: data.md  index.md
_sources/_autosummary/: yarara.analysis.rst  yarara.analysis.table.rst  yarara.analysis.table_xy.rst  yarara.analysis.table_xy.tableXY.rst  yarara.constants.rst  yarara.deprecated.rst  yarara.deprecated.try_field.rst  yarara.iofun.open_pickle.rst  yarara.iofun.pickle_dump.rst  yarara.iofun.rst  yarara.iofun.save_pickle.rst  yarara.iofun.touch_pickle.rst  yarara.materials.Contam_HARPN.rst  yarara.materials.FixedFloat.rst  yarara.materials.FixedInt.rst  yarara.materials.FixedString.rst  yarara.materials.Ghost_HARPN.rst  yarara.materials.SIMBADEntry.rst  yarara.materials.Table_stellar_model.rst  yarara.materials.Telluric_spectrum.rst  yarara.materials.rst  yarara.mathfun.gaussian.rst  yarara.mathfun.lorentzian.rst  yarara.mathfun.parabole.rst  yarara.mathfun.rst  yarara.mathfun.sinus.rst  yarara.mathfun.voigt.rst  yarara.plots.auto_axis.rst  yarara.plots.init_matplotlib.rst  yarara.plots.my_colormesh.rst  yarara.plots.plot_color_box.rst  yarara.plots.plot_copy_time.rst  yarara.plots.rst  yarara.plots.transit_draw.rst  yarara.rst  yarara.run_yarara.Task.rst  yarara.run_yarara.cli.rst  yarara.run_yarara.rst  yarara.run_yarara.run.rst  yarara.stages.load_and_adapt_input_data.rst  (+51 more)
database/SIMBAD/: table_stars.p
docs/source/: conf.py  data.md  index.md  index.rst  products.md
refactor/: myr_new.pydisable  myr_old.pydisable
src/yarara/: Rassine_functions.py  __init__.py  analysis.py  constants.py  deprecated.py  io.py  iofun.py  mathfun.py  my_classes.py  my_functions.py  my_rassine_tools.py  paths.py  plots.py  run_yarara.py  stats.py  util.py
src/yarara/analysis/: __init__.py  table.py  table_xy.py
test/: test_HD110315.bats
(+78 files in other folders)
