[tool.poetry]
authors = ["Michael Cretignier <michael.cretignier@gmail.com>"]
description = "YARARA astronomy tool"
name = "yarara"
version = "0.1.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.poetry.dependencies]
PyAstronomy = "0.16.0"
PyQt5 = "^5.15.6"
PyQt5-Qt = "^5.15.2"
PyQt5-sip = "^12.9.1"
Shapely = "1.7.1"
astropy = "^4.2.1"
colorama = "0.4.4"
configpile = {version = "^6.0.0", extras = ["parsy", "rich"]}
corner = "2.2.1"
deepdish = "^0.3.7"
descartes = "1.1.0"
h5py = "^2.10.0"
kepderiv = "1.0.2"
kepmodel = "1.0.1"
lmfit = "1.0.2"
matplotlib = "^3.3.4"
numpy = "^1.20.1"
pandas = "^1.2.4"
parsy = "^1.4.0"
psutil = "5.8.0"
pydantic = "^1.8.0"
python = "^3.8,<3.11"
scikit-learn = "0.24.1"
scipy = "^1.8.0"
spleaf = "2.0.1"
statsmodels = "^0.13.2"
tqdm = "4.59.0"
typing-extensions = "^4.1.1"
wpca = "0.1"
xgboost = "1.4.2"

myst-nb = {version = "^0.13.2", optional = true}
python-dace-client = "^2.1.1"
sphinx = {version = "4.3.2", optional = true}
sphinx-argparse = {version = "^0.3.1", optional = true}
sphinx-autodoc-typehints = {version = "^1.17.0", optional = true}
sphinx-book-theme = {version = "^0.2.0", optional = true}
sphinx-pydantic = {version = "^0.1.1", optional = true}
sphinxcontrib-bibtex = {version = "^2.4.1", optional = true}
sphinxnotes-strike = {version = "^1.0", optional = true}
typeguard = "^2.13.3"
nptyping = "^2.0.0"

[tool.poetry.extras]
docs = [
  "sphinx",
  "sphinx-argparse",
  "sphinx-autodoc-typehints",
  "sphinx-book-theme",
  "sphinx-pydantic",
  "sphinxcontrib-bibtex",
  "sphinxnotes-strike",
  "esbonio",
]

[tool.poetry.dev-dependencies]
black = "^22.1.0"
commitizen = "^2.21.2"
coverage = "^6.3.2"
esbonio = {version = "^0.9.0", optional = true}
isort = "^5.10.1"
mypy = "^0.931"
pandas-stubs = "^1.2.0.43"
pytest = "^7.0.1"
pytest-black = "^0.3.12"
pytest-mypy-plugins = "^1.9.3"

[tool.pytest.ini_options]
addopts = [
  "--black",
  "--tb=short",
]
