[tool.poetry]
authors = ["Michael Cretignier <michael.cretignier@gmail.com>", "Denis Rosset <physics@denisrosset.com>"]
description = "YARARA astronomy tool"
name = "yarara"
version = "0.1.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.poetry.dependencies]
PyAstronomy = "0.16.0"
PyQt5 = "^5.15.6"
PyQt5-Qt = "^5.15.2"
PyQt5-sip = "^12.9.1"
astropy = "^4.2.1"
colorama = "^0.4.4"
configpile = {version = "^6.0.0", extras = ["parsy", "rich"]}
lmfit = "^1.0.2"
matplotlib = "^3.5.2"
numpy = "^1.22.3"
pandas = "^1.2.4"
python = "^3.8,<3.11"
python-dace-client = "^2.1.1"
scikit-learn = "0.24.1"
scipy = "^1.8.0"
statsmodels = "0.13.2"
tqdm = "^4.59.0"
typing-extensions = "^4.1.1"
wpca = "0.1"

ipykernel = {version = "^6.13.0", optional = true}
myst-nb = {version = "^0.13.2", optional = true}
sphinx = {version = "4.3.2", optional = true}
sphinx-argparse = {version = "^0.3.1", optional = true}
sphinx-autodoc-typehints = {version = "^1.17.0", optional = true}
sphinx-book-theme = {version = "^0.2.0", optional = true}
sphinxcontrib-bibtex = {version = "^2.4.1", optional = true}
sphinxnotes-strike = {version = "^1.0", optional = true}

[tool.poetry.extras]
docs = [
  "myst-nb",
  "ipykernel",
  "sphinx",
  "sphinx-argparse",
  "sphinx-autodoc-typehints",
  "sphinx-book-theme",
  "sphinxcontrib-bibtex",
  "sphinxnotes-strike",
  "esbonio",
]

[tool.poetry.dev-dependencies]
black = "^22.1.0"
commitizen = "^2.21.2"
coverage = "^6.3.2"
doc8 = "^0.10.1"
esbonio = "^0.10.2"
isort = "^5.10.1"
mypy = "^0.941"
pandas-stubs = "^1.2.0.43"
pylint = "^2.13.5"
pytest = "^7.0.1"
rstcheck = "^3.3.1"

# [tool.pyright]
# exclude = [
#   "reafctor/",
# ]

[tool.mypy]
plugins = ["numpy.typing.mypy_plugin"]

python_version = "3.8"

files = [
  "src/yarara",
  "tests",
]
mypy_path = "$MYPY_CONFIG_FILE_DIR/src"

# check_untyped_defs = true
# disallow_any_generics = true
# disallow_incomplete_defs = true
# disallow_subclassing_any = true
# disallow_untyped_calls = true
# disallow_untyped_decorators = true
# disallow_untyped_defs = true
no_implicit_optional = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
show_none_errors = true
strict_equality = true
strict_optional = true
warn_redundant_casts = true
# warn_return_any = true

[tool.pytest.ini_options]
addopts = [
  "-s", # show test "print" statements
  "--tb=short",
]

[tool.black]
line-length = 99
target_version = ['py38']

[tool.isort]
line_length = 99
profile = "black"
py_version = 38

[tool.pylint.BASIC]
argument-rgx = "[a-z_][a-z0-9_]?{1,30}$"
class-attribute-rgx = "[a-z_][a-z0-9_]?{1,30}$"
variable-rgx = "[a-z_][a-z0-9_]?{1,30}$"

[tool.pylint.messages_control]
disable = [
  "assignment-from-none", # this is caught by mypy and has false positives
  "no-value-for-parameter", # this is caught by mypy and has false positives
  "unused-argument", # happens quite often in OOP hierarchies
]
