[tool.poetry]
authors = ["Michael Cretignier <michael.cretignier@gmail.com>", "Denis Rosset <physics@denisrosset.com>"]
description = "YARARA astronomy tool"
name = "yarara"
version = "0.1.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.poetry.dependencies]
PyAstronomy = "0.16.0"
astropy = "^5.0.4"
colorama = "^0.4.4"
lmfit = "^1.0.2"
matplotlib = "^3.5.2"
numpy = "^1.23.0"
pandas = "^1.4.2"
python = "^3.8,<3.11"
python-dace-client = "^2.1.1"
rassine = "0.4.0"
scikit-learn = "0.24.1"
scipy = "^1.8.1"
statsmodels = "0.13.2"
tqdm = "^4.59.0"
typing-extensions = "^4.4.0"
wpca = "0.1" 

ipykernel = {version = "^6.17.1", optional = true}
myst-nb = {version = "^0.17.1", optional = true}
sphinx = {version = "^5.3.0", optional = true}
sphinx-argparse = {version = "^0.4.0", optional = true}
sphinx-autodoc-typehints = {version = "^1.19.5", optional = true}
sphinx-book-theme = {git = "https://github.com/executablebooks/sphinx-book-theme.git", rev = "060ba47685b49d2ea0fdf86af65fac4e35912618"}
sphinxcontrib-bibtex = {version = "^2.5.0", optional = true}
sphinxcontrib-programoutput = {version = "^0.17", optional = true}

[tool.poetry.extras]
docs = [
  "esbonio",
  "myst-nb",
  "ipykernel",
  "sphinx",
  "sphinx-argparse",
  "sphinx-autodoc-typehints",
  "sphinx-book-theme",
  "sphinxcontrib-bibtex",
]

[tool.poetry.dev-dependencies]
black = "^22.10.0"
doc8 = "^1.0.0"
esbonio = "^0.14.3"
coverage = "^6.3.2"
isort = "^5.10.1"
mypy = "^0.991"
pandas-stubs = "^1.2.0.43"
pylint = "^2.15.6"
pytest = "^7.1.1"
rstcheck = "^6.1.1"

[tool.mypy]
plugins = ["numpy.typing.mypy_plugin"]

python_version = "3.8"

files = [
  "src/yarara",
  "tests",
]
mypy_path = "$MYPY_CONFIG_FILE_DIR/src"

# check_untyped_defs = true
# disallow_any_generics = true
# disallow_incomplete_defs = true
# disallow_subclassing_any = true
# disallow_untyped_calls = true
# disallow_untyped_decorators = true
# disallow_untyped_defs = true
no_implicit_optional = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
show_none_errors = true
strict_equality = true
strict_optional = true
warn_redundant_casts = true
# warn_return_any = true

[tool.pytest.ini_options]
addopts = [
  "-s", # show test "print" statements
  "--tb=short",
]

[tool.black]
line-length = 99
target_version = ['py38']

[tool.isort]
line_length = 99
profile = "black"
py_version = 38

[tool.pylint.BASIC]
argument-rgx = "[a-z_][a-z0-9_]?{1,30}$"
class-attribute-rgx = "[a-z_][a-z0-9_]?{1,30}$"
variable-rgx = "[a-z_][a-z0-9_]?{1,30}$"

[tool.pylint.messages_control]
disable = [
  "assignment-from-none", # this is caught by mypy and has false positives
  "no-value-for-parameter", # this is caught by mypy and has false positives
  "unused-argument", # happens quite often in OOP hierarchies
]
